# finn.h

./: .gitignore  README.md  main.py
llm_finn/second_step/: callback.py  db.py
llm_finn/third_step/: callback.py  db.py  history.py  main.py  pyproject.toml
llm_finn/third_step/chatbot/: history.py
llm_finn/third_step/chatbot/api/: skill.py
llm_finn/third_step/chatbot/app/: callback.py
llm_finn/third_step/chatbot/app/template/: ANSWER_TEMPLATE.txt  DEFAULT_TEMPLATE.txt  INTENT_TEMPLATE.txt
llm_finn/third_step/chatbot/db/: chroma.py
llm_finn/third_step/chatbot/domain/: model.py
